apps/torrents/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  strategy:
    type: RollingUpdate
  template:
    spec:
      serviceAccountName: sonarr
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.20
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - SETGID
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            tcpSocket:
              port: 8989
          readinessProbe:
            tcpSocket:
              port: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads/torrents
              subPath: torrents
            - name: downloads
              mountPath: /downloads/tv
              subPath: tv
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
