apps/torrents/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
