apps/torrents/sonarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  parentRefs:
    - name: eg
      sectionName: https
      namespace: gateway
  hostnames:
    - sonarr.homie.e10n.me
  rules:
    - backendRefs:
        - name: sonarr
          namespace: torrents
          port: 80
